seaqt/QtMultimedia/gen_qvideorenderercontrol.h

class QAbstractVideoSurface;
class QMetaObject;
class QVideoRendererControl;
typedef struct QAbstractVideoSurface QAbstractVideoSurface;
typedef struct QMetaObject QMetaObject;
typedef struct QVideoRendererControl QVideoRendererControl;
QMetaObject* QVideoRendererControl_metaObject(const QVideoRendererControl* self);
void* QVideoRendererControl_metacast(QVideoRendererControl* self, const char* param1);
int QVideoRendererControl_metacall(QVideoRendererControl* self, int param1, int param2, void** param3);
struct miqt_string QVideoRendererControl_tr(const char* s);
struct miqt_string QVideoRendererControl_trUtf8(const char* s);
QAbstractVideoSurface* QVideoRendererControl_surface(const QVideoRendererControl* self);
void QVideoRendererControl_setSurface(QVideoRendererControl* self, QAbstractVideoSurface* surface);
struct miqt_string QVideoRendererControl_tr2(const char* s, const char* c);
struct miqt_string QVideoRendererControl_tr3(const char* s, const char* c, int n);
struct miqt_string QVideoRendererControl_trUtf82(const char* s, const char* c);
struct miqt_string QVideoRendererControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QVideoRendererControl_staticMetaObject();
void QVideoRendererControl_delete(QVideoRendererControl* self);